Fix user avatar visibility (closes #66)

--- a/app/assets/stylesheets/top4.css.scss
+++ b/app/assets/stylesheets/top4.css.scss
@@ -48,9 +48,11 @@ div.top4 {
             }
             .avatar {
                 width: 120px;
+
                 img {
-                    margin-left: -37px;
-                    margin-top: -60px;
+                    position: absolute;
+                    top: -40px;
+                    left: 30px;
                     border-radius: 50%;
                     box-shadow: 0 0 0 3px #fff, 0 0 0 4px #999, 0 2px 5px 4px rgba(0,0,0,.2);
                 }
